examples/should-fail/f00_unknown_variable.lean
def demo_bad_unknown_variable : (P : Prop) -> P :=
  fun (P : Prop) => q
